--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.14.12",
     "@mui/styled-engine-sc": "^5.14.12",
     "@prisma/client": "^6.3.1",
+    "@reduxjs/toolkit": "^2.7.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -51,6 +52,7 @@
     "react-helmet-async": "^2.0.5",
     "react-i18next": "^14.0.3",
     "react-phone-input-material-ui": "^2.18.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^6.16.0",
     "recharts": "^2.12.2",
     "tailwindcss-animated": "^1.0.1",
@@ -62,6 +64,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-helmet": "^6.1.11",
+    "@types/react-redux": "^7.1.34",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
