--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "goldendie",
+  "name": "goldenmill",
   "private": true,
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-    "dev:client": "vite",
-    "dev:server": "cd server && node index.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "generate-sitemap": "ts-node scripts/generate-sitemap.ts"
+  "dev:client": "vite",
+  "dev:server": "cd server && node index.js",
+  "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+  "build": "tsc && vite build",
+  "postbuild": "ts-node scripts/generate-sitemap.ts",
+  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+  "preview": "vite preview",
+  "generate-sitemap": "ts-node scripts/generate-sitemap.ts"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
