--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "version": "0.0.0",
   "type": "commonjs",
   "scripts": {
-  "dev:client": "vite",
-  "dev:server": "cd server && node index.js",
-  "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-  "build": "tsc && vite build",
-  "postbuild": "ts-node scripts/generate-sitemap.ts",
-  "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-  "preview": "vite preview",
-  "generate-sitemap": "ts-node scripts/generate-sitemap.ts"
+    "dev:client": "vite",
+    "dev:server": "cd server && node index.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "build": "tsc && vite build",
+    "postbuild": "cd server && ts-node scripts/generateProductSitemap.ts",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "generate-sitemap": "cd server && ts-node scripts/generateProductSitemap.ts"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
@@ -76,7 +76,8 @@
     "postcss": "^8.4.31",
     "prisma": "^6.3.1",
     "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "vite": "^4.4.5",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pwa": "^0.16.5"
