--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -19,6 +19,10 @@ jobs:
     #       node-version: '20' 
         env:
           DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      - name: Create .env
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" > .env
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" > server/.env
       - name: Cache yarn for speedest install
         uses: actions/cache@v4
         with:
