--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,9 @@
     "start": "node index.js",
     "dev": "nodemon src/index.ts",
     "build": "prisma generate && tsc && npm run generate-sitemap",
-    "generate-sitemap": "node scripts/generateProductSitemap.js"
+    "generate-sitemap": "node scripts/generateProductSitemap.js",
+    "generate-sitemaps": "ts-node scripts/generateSitemaps.ts",
+    "optimize-svg": "ts-node scripts/optimizeSVG.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
@@ -21,7 +23,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
-    "pg": "^8.13.1"
+    "pg": "^8.13.1",
+    "sharp": "^0.34.1",
+    "svgo": "^3.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
