--- a/package.json
+++ b/package.json
@@ -2,42 +2,46 @@
   "name": "goldenmill",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
     "dev:client": "vite",
     "dev:server": "cd server && node index.js",
-    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
+    "dev:ssr": "NODE_ENV=development node server.js",
     "build": "tsc && vite build",
+    "build:ssr": "vite build --ssr src/entry-server.tsx",
+    "build:server": "vite build --ssr src/entry-server.tsx --outDir server",
     "postbuild": "cd server && ts-node scripts/generateProductSitemap.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate-sitemap": "cd server && ts-node scripts/generateProductSitemap.ts"
+    "generate-sitemap": "ts-node scripts/generate-sitemap.ts",
+    "start:ssr": "node server.js"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.12",
-    "@mui/material": "^5.14.12",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^5.14.12",
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^5.10.2",
     "@reduxjs/toolkit": "^2.7.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/nodemailer": "^6.4.17",
     "@types/recharts": "^1.8.29",
-    "axios": "^1.7.9",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "countries-list": "^3.0.6",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
+    "express": "^4.18.2",
     "formik": "^2.4.6",
-    "i18next": "^23.16.0",
+    "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "i18next-http-backend": "^3.0.2",
     "js-cookie": "^3.0.5",
@@ -48,38 +52,39 @@
     "pg": "^8.13.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^2.0.5",
-    "react-i18next": "^14.0.3",
+    "react-helmet-async": "^2.0.4",
+    "react-i18next": "^14.0.5",
     "react-phone-input-material-ui": "^2.18.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.22.1",
     "recharts": "^2.12.2",
     "svgo": "^3.3.2",
     "tailwindcss-animated": "^1.0.1",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "compression": "^1.7.4"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.6",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "@types/react-helmet": "^6.1.11",
     "@types/react-redux": "^7.1.34",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
-    "eslint": "^8.45.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.31",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.4.35",
     "prisma": "^6.3.1",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "vite": "^4.4.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.1.3",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-pwa": "^0.16.5"
   },
