--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^6.10.0",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "react-helmet-async": "^2.0.5",
     "sharp": "^0.34.1",
     "svgo": "^3.3.2"
   },
