--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
+      - name: Clean up npm lock
+        run: rm -f package-lock.json
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
