--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "prisma generate && npx tsc && npm run generate-sitemap",
-    "generate-sitemap": "node scripts/generateProductSitemap.js",
+    "generate-sitemap": "ts-node scripts/generateProductSitemap.ts",
     "generate-sitemaps": "ts-node scripts/generateSitemaps.ts",
     "optimize-svg": "ts-node scripts/optimizeSVG.ts",
     
@@ -30,7 +30,7 @@
     "path": "^0.12.7",
     "pg": "^8.13.1",
     "react-helmet-async": "^2.0.5",
-    "sharp": "^0.34.1",
+    "sharp": "^0.32.6",
     "svgo": "^3.3.2"
   },
   "devDependencies": {
