--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -60,8 +60,8 @@ jobs:
             
             # Устанавливаем зависимости параллельно
             echo "Installing dependencies..."
-            yarn install --frozen-lockfile --prefer-offline &
-            cd server && yarn install --frozen-lockfile --prefer-offline &
+            yarn install --prefer-offline &
+            cd server && yarn install --prefer-offline && yarn add sharp@0.32.6 --ignore-engines --platform=linux --arch=x64 && cd ..
             wait
             
             echo "Dependencies installed successfully"
@@ -115,27 +115,30 @@ jobs:
           ssh root@77.73.39.210 << 'EOF'
             set -e
             echo "Checking process status..."
-            sleep 10
+            sleep 3
             pm2 list
             
-            echo "Checking PM2 logs..."
-            echo "API Server logs:"
-            pm2 logs goldenmill-server --lines 20
-            echo "SSR Server logs:"
-            pm2 logs goldenmill-ssr --lines 20
+            # Запускаем мониторинг в фоновом режиме
+            echo "Starting PM2 monitoring..."
+            pm2 monit > /dev/null 2>&1 &
+            MONIT_PID=$!
             
             echo "Checking application availability..."
-            for i in {1..5}; do
+            for i in {1..3}; do
               echo "Attempt $i..."
               if curl -f http://localhost:3002 && curl -f http://localhost:3005; then
                 echo "Both services are responding!"
+                # Останавливаем мониторинг после успешной проверки
+                kill $MONIT_PID 2>/dev/null || true
                 break
               fi
-              if [ $i -eq 5 ]; then
-                echo "Services failed to respond after 5 attempts"
+              if [ $i -eq 3 ]; then
+                echo "Services failed to respond after 3 attempts"
+                # Останавливаем мониторинг при ошибке
+                kill $MONIT_PID 2>/dev/null || true
                 exit 1
               fi
-              sleep 5
+              sleep 2
             done
             
             echo "Deployment completed successfully!"
