--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -135,6 +135,7 @@ jobs:
               if [ $i -eq 3 ]; then
                 echo "Services failed to respond after 3 attempts"
                 # Останавливаем мониторинг при ошибке
+                pm2 logs goldenmill-server --lines 40
                 kill $MONIT_PID 2>/dev/null || true
                 exit 1
               fi
