--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "API server for GoldenMill products",
   "main": "index.js",
   "type": "commonjs",
+  "license": "UNLICENSED",
   "scripts": {
     "dev": "nodemon src/index.ts",
     "build": "prisma generate && npx tsc && npm run generate-sitemap",
