--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:ssr": "node server.js",
     "build": "tsc && vite build",
     "build:ssr": "vite build --ssr src/entry-server.tsx",
+    "build:ssr:tsc": "tsc src/entry-server.tsx --outDir dist --esModuleInterop",
     "postbuild": "cd server && tsx scripts/generateProductSitemap.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
