--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,21 +1,13 @@
 {
+  "extends": "./tsconfig.json",
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "outDir": "dist",
+    "jsx": "react-jsx",
+    "resolveJsonModule": true,
     "esModuleInterop": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist",
-    "rootDir": "./server",
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["src/*"]
-    },
-    "allowJs": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
-  "include": ["server/**/*"],
+  "include": ["src/entry-server.tsx"],
   "exclude": ["node_modules"]
 } 
