--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -6,7 +6,11 @@
     "jsx": "react-jsx",
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "types": ["vite/client"],
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true
   },
   "include": ["src/entry-server.tsx"],
   "exclude": ["node_modules"]
