--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "generate-sitemap": "tsx scripts/generate-sitemap.ts",
-    "start:ssr": "pm2 start ecosystem.config.cjs --only goldenmill-ssr",
+    "start": "pm2 start /var/www/goldenmill/prod/ecosystem.config.cjs --only goldenmill-server",
+    "start:ssr": "pm2 start /var/www/goldenmill/prod/ecosystem.config.cjs --only goldenmill-ssr",
     "stop:ssr": "pm2 stop goldenmill-ssr",
     "restart:ssr": "pm2 restart goldenmill-ssr",
     "logs:ssr": "pm2 logs goldenmill-ssr",
