--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dev:client": "vite",
     "dev:ssr": "node server.js",
     "build": "tsc && vite build",
-    "build:ssr": "vite build --ssr src/entry-server.tsx",
-    "build:ssr:tsc": "tsc -p tsconfig.server.json",
+    "build:ssr": "tsc -p tsconfig.server.json",
     "postbuild": "cd server && tsx scripts/generateProductSitemap.ts",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
