--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,16 +2,23 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "ESNext",
+    "moduleResolution": "bundler",
+    "target": "ESNext",
     "outDir": "dist",
-    "jsx": "react-jsx",
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "types": ["vite/client", "node"],
-    "moduleResolution": "node",
-    "isolatedModules": true,
     "noEmit": false,
-    "allowImportingTsExtensions": false
+    "jsx": "react-jsx",
+    "allowImportingTsExtensions": false,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "lib": ["ESNext", "DOM"],
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noImplicitReturns": false,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true
   },
   "include": ["src/entry-server.tsx"],
   "exclude": ["node_modules"]
