--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -11,15 +11,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "esModuleInterop": true,
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": false,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "strict": true
+    "strict": true,
+    "types": ["vite/client", "node"]
   },
-  "include": ["src/entry-server.tsx"],
+  "include": ["src/**/*", "src/types/*.d.ts"],
   "exclude": ["node_modules"]
 } 
