--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-i18next": "^14.0.5",
     "react-phone-input-material-ui": "^2.18.1",
     "react-redux": "^9.2.0",
+    "react-router": "^7.6.0",
     "react-router-dom": "^6.22.1",
     "recharts": "^2.12.2",
     "sharp": "0.32.6",
