--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "generate-sitemap": "cd server && ts-node scripts/generateProductSitemap.ts"
+    "seo:check": "chmod +x ./seo-tests/seo-check.sh && ./seo-tests/seo-check.sh"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
