--- a/server/package.json
+++ b/server/package.json
@@ -7,9 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon src/index.ts",
-    "build": "prisma generate && tsc && npm run generate-sitemap",
-    "generate-sitemap": "node scripts/generateProductSitemap.js",
-    "generate-sitemaps": "ts-node scripts/generateSitemaps.ts",
+    "build": "prisma generate && tsc",
     "optimize-svg": "ts-node scripts/optimizeSVG.ts"
   },
   "dependencies": {
@@ -29,7 +27,10 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3",
-    "prisma": "^6.3.1"
+    "prisma": "^6.3.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
+    "@types/node": "^22.15.21"
   },
   "nodemonConfig": {
     "watch": [
