--- a/goldenmill.conf
+++ b/goldenmill.conf
@@ -12,6 +12,10 @@ server {
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
 
+    # SEO оптимизации
+    add_header X-Robots-Tag "index, follow" always;
+    add_header Link "</assets/css/main.css>; rel=preload; as=style, </assets/js/main.js>; rel=preload; as=script" always;
+
     # Настройки gzip
     gzip on;
     gzip_vary on;
@@ -51,12 +55,14 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
+        add_header Vary "Accept-Encoding";
     }
 
     # Статические ассеты (JS, CSS)
     location /assets/ {
         expires 30d;
         add_header Cache-Control "public, no-transform";
+        add_header Vary "Accept-Encoding";
         try_files $uri =404;
     }
 
@@ -69,6 +75,50 @@ server {
     location = /manifest.webmanifest {
         add_header Content-Type application/manifest+json;
         expires 0;
+    }
+
+    # Favicon файлы
+    location = /favicon.ico {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    location = /favicon.png {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    location = /favicon.svg {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Статические SEO файлы из /public
+    location ~ ^/(robots\.txt|sitemap.*\.xml|site\.webmanifest|favicon\.(ico|png|svg)|logo.*\.svg|icon\.svg)$ {
+        # Сначала ищем в статических файлах
+        try_files $uri @server_seo;
+        expires 1d;
+        add_header Cache-Control "public, no-transform";
+        add_header Vary "Accept-Encoding";
+        
+        # Временное логирование для отладки SEO файлов
+        # TODO: Удалить после проверки работоспособности
+        error_log /var/log/nginx/seo_debug.log debug;
+    }
+
+    # Обработка серверных SEO файлов
+    location @server_seo {
+        proxy_pass http://localhost:3002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Кэширование для серверных файлов
+        expires 1h;
+        add_header Cache-Control "public, no-transform";
+        add_header Vary "Accept-Encoding";
     }
 
     # API конфигурация
@@ -93,7 +143,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # HSTS
-    add_header Strict-Transport-Security "max-age=63072000" always;
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
 }
 
 # Редирект с HTTP на HTTPS
